--- a/app/src/main/res/layout/activity_loginn.xml
+++ b/app/src/main/res/layout/activity_loginn.xml
@@ -76,18 +76,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TextView" />
 
-    <TextView
 
-        android:layout_marginEnd="17dp"
-        android:id="@+id/create"
+    <Button
+        android:id="@+id/btn_signup"
+        android:text="Crate account"
+        android:textSize="18dp"
+        android:textAllCaps="false"
+        android:paddingStart="0dp"
+        android:background="@android:color/transparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:fontFamily="@font/regular"
-        android:text="Create Account"
         android:textColor="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
+
     <Button
         android:id="@+id/LoginButton"
         android:layout_width="match_parent"
@@ -98,6 +101,7 @@
         android:backgroundTint="#3498DB"
         android:text="Login"
         app:cornerRadius="8dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
