--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -13,7 +13,7 @@
     >
 
     <ImageView
-        android:id="@+id/picture"
+        android:id="@+id/poster"
         tools:src="@tools:sample/avatars"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,11 +22,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/film_name"
+        android:id="@+id/news_name"
         android:layout_width="360dp"
         android:layout_height="70dp"
         tools:text="@tools:sample/full_names"
-        app:layout_constraintBottom_toBottomOf="@+id/picture"
+        app:layout_constraintBottom_toBottomOf="@+id/poster"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/bg"
 
